# preference_databuilder

./: .gitignore  README.md  pyproject.toml
preference_databuilder/: .env.example  main.py  main01.py  ollamaapi.py  ppo_ollamaapi.py  total_dataset.json
